--- a/lectures/15_iv_partI.tex
+++ b/lectures/15_iv_partI.tex
@@ -182,13 +182,15 @@
 
 \begin{frame}{Today's topic}
   \begin{wideitemize}
-  \item In so many examples, we've worried about estimating the effect
+  \item In many examples, we've worried about estimating the effect
     of some treatment $D_{i}$ on $Y_{i}$, but concerned that this
     estimate will be biased
   \item In circumstances where we had strong ignorability (due to
     perhaps randomization), we felt confident that this was not a concern
-  \item But what about when this isn't the case? We need to create
-    ``as-if'' random variation in $D_{i}$
+  \item But what about when this isn't the case?
+  \begin{itemize}
+    \item  We need to \emph{create}  ``as-if'' random variation in $D_{i}$
+  \end{itemize}
   \item The very popular solution: instrumental variables
   \end{wideitemize}
 \end{frame}
