--- a/lectures/03_propensity_scores.tex
+++ b/lectures/03_propensity_scores.tex
@@ -530,8 +530,7 @@
 
 \begin{frame}{Crucial empirical context: Lalonde (1986), Dehijia and Wahba (1999,2002), Smith and Todd (2005)}
   \begin{wideitemize}
-    \item There was a randomized intervention called the NSW (National Supported Work Demon-
-      stration) -- temporary employment program to give work experience
+    \item There was a randomized intervention called the NSW (National Supported Work Demonstration) -- temporary employment program to give work experience
     \item Key takeaway from Lalonde (1986) -- non-experimental
       analaysis of this program (e.g. defining control gorup using
       non-experimental data) would have given biased estimates compared to experimental approach
