--- a/syllabus.tex
+++ b/syllabus.tex
@@ -77,7 +77,7 @@ Spring 2024
 \begin{minipage}[t]{.75\textwidth}
 \begin{tabular}{llccll}
 \textbf{Instructor:} & Paul Goldsmith-Pinkham & & &   \textbf{Time:} & TTh, 2:40-4pm  \\
-\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & \textbf{Location:} & Evans Hall 4230 
+\textbf{Email:} &  \href{mailto:paul.goldsmith-pinkham@yale.edu}{paul.goldsmith-pinkham@yale.edu} & & & \textbf{Location:} & Usually Evans Hall 2430, see Canvas for details
 \end{tabular}
 \end{minipage}
 \rule{6.5in}{0.4pt}
@@ -89,7 +89,7 @@ Spring 2024
 
 \noindent\textbf{Course Pages:} \begin{enumerate}
 \item \url{https://github.com/paulgp/applied-methods-phd}
-\item \url{https://yale.instructure.com/courses/95817} [Yale students only]
+\item \url{https://yale.instructure.com/courses/104052} [Yale students only]
 \end{enumerate}
 
 \vskip.15in
@@ -131,28 +131,20 @@ artisanship. By the end of the term, my hope is for three things:
 \noindent\textbf{Assignments:}
 There will be problem sets most weeks. These will involve both
 theoretical calculations and computer exercises in which you will be
-asked to analyze data sets. You can use any computer package you wish
-to use. Solutions will be handed out written in R. Since there will be
-a fair number of problem sets, and in order to allow me to post the
-solutions quickly on the webpage for the course, I will not accept
+asked to analyze data sets.. Solutions will be handed out written in R. Since there will be a fair number of problem sets, and in order to allow me to post the solutions quickly on the webpage for the course, I will not accept
 late problem sets. If you anticipate difficulty meeting the deadline,
 you can ask me for the problem set earlier to give you additional time
-to work on it.
+to work on it. Since there are a very large number of students in the class, I will not be providing individual feedback on the problem sets, but I am happy to discuss them in office hours.
 
-You can work together on the problem sets and discuss them with
+In order to access these problem sets, you will need to have a Github account, as I will be using the Github classroom feature to distribute the problem sets. You can work together on the problem sets and discuss them with
 classmates, but you need to write up the results individually and hand
 them in separately. Grades will be based on the problem sets, divided
-evenly over the problem sets.
+evenly over the problem sets. 
 
 I expect these assignments to be coded from ``scratch.'' I will
-specify when canned packages are appropriate. In other words, when
-estimating a regression, I am not looking for the results of
-\texttt{lm( y $\sim$ x)}. Rather, I expect you to construct two
-matrices and calculate the estimates using this. I also expect you to
-attempt to maintain good coding practices while doing so -- this will
+specify when canned packages are appropriate. In other words, when the problem is about estimating a regression, and it is not specified otherwise, I am not looking for the results of \texttt{lm( y $\sim$ x)}. Rather, I expect you to construct two matrices and calculate the estimates using this. I also expect you to attempt to maintain good coding practices while doing so -- this will
 likely be challenging for those of you who are inexperienced at
-programming, so please plan accordingly -- I will not be providing
-additional instruction on coding beyond what I cover in class.  See
+programming, so please plan according. See
 the following resources in R for guidance (Many thanks to Max Kasy for
 organizing these materials):
 
@@ -161,6 +153,8 @@ organizing these materials):
 \item R for Data Science: \url{https://r4ds.hadley.nz/}
 \item Guidance on Data Visualization: \url{https://socviz.co/}
 \end{itemize}
+
+You are also very welcome (and encouraged) to use any and all large language model help when working on the problem sets! 
 
 \vskip.15in
 \noindent\textbf{Main References:} %\footnotemark
@@ -189,7 +183,9 @@ ECON 550, ECON 551
     \item Chapter 7, Aronow and Miller
     \item Chapter 1, Imbens and Rubin
     \item Chapter 3, Cunningham
-    \item ``Structural vs. Reduced Form'' Language, Confusion and Models in Empirical Economics, Haile \url{http://www.econ.yale.edu/~pah29/intro.pdf} (or on course website)
+    \item ``Structural vs. Reduced Form'' Language, Confusion and Models in Empirical Economics, Haile \url{http://www.econ.yale.edu/~pah29/intro.pdf}  (or on course website)
+    \item ``Models, Measurement, and the Language of Empirical Economics'', Haile \url{https://s3.amazonaws.com/file.paulgp.com/30d/haile.pdf
+    }
     \item ``Statistics and Causal Inference'', Holland 1986
     \item ``The Identification Zoo: Meanings of Identification in Econometrics'', Lewbel, 2019
     \end{itemize}
